# llvm-project

./: #output_17#  .buildbot.sh  .buildbot_dockerfile_debian  .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .gitreview  .mailmap  .pre-commit-config.yaml  .project  .watchmanconfig  0001-Fix-neon_vector_type-to-be-only-for-sme-sve-neon-and.patch  0001-Reland-Add-a-pass-to-collect-dropped-var-stats-for-M.patch  0001-Reland-NFC-Move-DroppedVariableStats-to-its-own-file.patch  0001-analyzer-Removed-AST-matching-to-get-containers-regi.patch  1  1.cpp  1.txt  1000.c  202209301111.patch  78  AMX_C_EXTENSION_SPECIFICATION.md  AMX_REFERENCE_IMPLEMENTATION.md  AggressiveInstCombine.cpp  Atomic.cpp  BACKLOG.md  BUILD.bazel  BasicBlockSectionsProfileReader.h  CLAUDE.md  CLI_CLANG_TOOL3.py  CMakeLists.txt  CMakePresets.json  (+228 more)
FortranRuntime/: CMakeLists.txt  README.md
FortranRuntime/cmake/: config.h.cmake.in
FortranRuntime/lib/: CMakeLists.txt
FortranRuntime/module/: CMakeLists.txt  __fortran_builtins.f90  cudadevice.f90  mma.f90
FortranRuntime/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
FortranRuntime/unittests/: CMakeLists.txt
aiir/: CMakeLists.txt  Maintainers.md  README.md
aiir/docs/: ActionTracing.md  Bufferization.md  BytecodeFormat.md  CAPI.md  CMakeLists.txt  Canonicalization.md  DataLayout.md  DeclarativeRewrites.md  Diagnostics.md  DialectConversion.md  Interfaces.md  LangRef.md  OwnershipBasedBufferDeallocation.md  PDLL.md  PassManagement.md  Passes.md  PatternRewriter.md  Quantization.md  README.txt  ReleaseNotes.md  Remarks.md  SPIRVToLLVMDialectConversion.md  ShapeInference.md  SymbolsAndSymbolTables.md  TargetLLVMIR.md  doxygen-mainpage.dox  doxygen.cfg.in
aiir/lib/: CMakeLists.txt  RegisterAllDialects.cpp  RegisterAllExtensions.cpp  RegisterAllPasses.cpp
aiir/python/: CMakeLists.txt
aiir/test/: APITest.h  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
aiir/tools/: CMakeLists.txt
aiir/unittests/: CMakeLists.txt
aiir/utils/: generate-test-checks.py
bolt/: .gitmodules  CHANGES.txt  CMakeLists.txt  LICENSE.txt  Maintainers.md  Maintainers.txt  README.md  README.rst  targets.bzl
bolt-rt/: CMakeLists.txt  common.h  hugify.cpp  instr.cpp
bolt/cmake/: OpenMPTesting.cmake
bolt/docs/: BAT.md  BOLTAArch64OptimizationStatus.rst  BinaryAnalysis.md  CMakeLists.txt  CommandLineArgumentReference.md  GettingStarted.rst  Heatmaps.md  OptimizingClang.md  OptimizingLinux.md  PacRetDesign.md  PointerAuthDesign.md  README.txt  RuntimeLibrary.md  conf.py  doxygen.cfg.in  generate_doc.py  index.rst  profiles.md
bolt/examples/: sample_nested.c  sample_task_multiple_producer.c  sample_task_single_producer.c
bolt/lib/: CMakeLists.txt
bolt/libomptarget/: CMakeLists.txt
bolt/maint/: bolt-release.pl  update-llvmomp.sh
bolt/runtime/: CMakeLists.txt  common.h  hugify.cpp  instr.cpp  instr_linux.cpp  runtime_types.h  sys_aarch64.h  sys_riscv64.h  sys_x86_64.h  syscall_wrappers.h
bolt/test/: CMakeLists.txt  R_ABS.pic.lld.cpp  assume-abi.test  avoid-wx-segment.c  bad-exe.test  bolt-icf.test  bolt-info.test  bolt-reserved.test  code-at-high-address.c  crel-relocs.test  dump-dot-func.test  duplicate_symbols.test  dwarf5-missing-dwo.c  dwo-name-retrieving.c  dwo-name-retrieving.test  dynamic-relocs.test  eh-frame-hdr.test  eh-frame-overwrite.test  elf32-basic.test  empty-fdata-file.test  heatmap.test  icf-hot-text-mover.c  indirect-goto-relocs.test  invalid-profile.test  keep-aranges.test  link_fdata.py  lit.cfg.py  lit.local.cfg  lit.site.cfg.py.in  lsda-section-name.cpp  lsda.cpp  match_dwarf.py  max-funcs.test  merge-fdata-bat-no-lbr.test  merge-fdata-between-no-lbr-and-lbr.test  merge-fdata-between-two-no-lbr.test  merge-fdata-lbr-mode.test  merge-fdata-mem-prof.test  merge-fdata-mixed-bat-no-lbr.test  merge-fdata-mixed-branch-memory.test  (+26 more)
bolt/tools/: CMakeLists.txt
bolt/unittests/: CMakeLists.txt
bolt/utils/: bughunter.sh  gen_icache_stress.md  gen_icache_stress.py  llvm-bolt-wrapper.py  nfc-check-setup.py  (+1 more)
dsmil/: CMakeLists.txt  DSMIL-GENERAL-FUZZING-FOUNDATION-COMPLETE.md  DSMIL-GENERAL-FUZZING-SUMMARY.md  DSSSL-ADVANCED-FUZZING-ENHANCEMENT-SUMMARY.md  DSSSL-FUZZING-IMPLEMENTATION-SUMMARY.md  OT-TELEMETRY-IMPLEMENTATION-SUMMARY.md  README.md  TELECOM-SS7-IMPLEMENTATION-SUMMARY.md  TEST-COVERAGE-SUMMARY.md
elf-parser/: CMakeLists.txt  asm
flang/: .drone.star  .gitignore  CMakeLists.txt  CODE_OWNERS.TXT  DoROCmRelease  EnableFlangBuild  LAPACK-bugs.txt  Maintainers.md  README.md
flang-rt/: .clang-format  CMakeLists 2.txt  CMakeLists.txt  CODE_OWNERS.TXT  README.md
fragile_marker/: CMakeLists.txt  Makefile  README.md  fragile_marker_pass.cpp
kitsune-tests/: .gitignore  CMakeLists.txt
libc/: .clang-tidy  .gitignore  CMakeLists.txt  Maintainers.md  Maintainers.rst  common_libc_tuners.cmake  llvm_libc_add_math_function.py
libclc/: .clang-tidy  CMakeLists.txt  Maintainers.md  README.TXT  README.md  check_external_calls.sh  check_external_funcs.sh  libclc.pc.in
libsycl/: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.txt  Maintainers.md  README.md
llvm-ir-dataset-utils/: .gitignore  .style.yapf  Pipfile  README.md  pyproject.toml
llvm-libgcc/: CMakeLists.txt  README.md  gcc_s.ver.in  generate_version_script.py
llvm-spirv/: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE2.TXT  LLVMSPIRVLib.pc.in  README.md
mlir/: .clang-format  .clang-tidy  CMakeLists.txt  Maintainers.md
next-ir-lib/: CMakeLists.txt
nextcrt/: .clang-format  .clang-tidy  CMakeLists.txt
obs/: .clang-format  .clang-tidy  CMakeLists.txt
offload/: CMakeLists.txt  Maintainers.md  README.md  README.txt  out
openmp/: .gitignore  .readthedocs.yaml  CMakeLists.txt  Maintainers.md  README.md  README.rst  build.sh  test.c
orc-rt/: CMakeLists.txt  CREDITS.TXT  LICENSE.TXT  Maintainers.md
sycl/: .clang-tidy  .gitignore  CMakeLists.txt  ReleaseNotes.md
tpm2_compat/: .gitignore  CMakeLists.txt  INTEGRATION.md  README.md
(+222168 files in other folders)
