[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LLVM"
dynamic = ["version"]
requires-python = ">=3.8"

[tool.hatch.version]
source = "code"
path = "llvm/utils/lit/lit/__init__.py"
expression = "__version__"

[tool.uv]
package = false

[tool.black]
extend-exclude = '''
(
  third-party/
)
'''

[tool.pyright]
executionEnvironments = [
  { root = "lldb/packages/Python", pythonVersion = "3.8" }
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
]
